# go2gazebo

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: check_joint.rviz  controllers.yaml  joint_names_go2_description.yaml
launch/: go2_gazebo.launch.py  go2_gazeboNew.launch.py  go2_rviz.launch.py
urdf/: go2_description.urdf  go2_descriptionD.urdf  go2_descriptionOriginal.urdf
world/: empty.world
